prevent word breaks on read-more link

--- a/assets/css/_patches.scss
+++ b/assets/css/_patches.scss
@@ -5,3 +5,7 @@
     display: block;
   }
 }
+
+.article .read-more {
+  display: inline-block;
+}
